--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 	<!--<link type="text/css" href="cave.css" rel="stylesheet"/> -->
 </head>
 <body>
-<h1>Hello World</h1>
+<h1>Hello World 2</h1>
 </body>
