--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,8 +14,12 @@
 
 function onload () {
 
+	CV.setEnvironment( { terrainDirectory: "/terrain/", surveyDirectory: "/surveys/" } );
+
 	CV.UI.init( "scene" );
-	CV.UI.loadCaveList( [ 'Castleton_Master.3d', 'Cheddar.lox', 'Peak_Master.3d', 'Bradwell_Master.3d', 'all.3d', 'Lathkill.lox', 'titan.3d', "Nettle_Pot_Master.3d", "P8_Master.3d"] );
+	CV.UI.loadCaveList( [ 'Giants_Oxlow_Maskhill_System.3d', 'Castleton_Master.3d', 'Cheddar.lox', 'Peak_Master.3d', 'Bradwell_Master.3d', 'all.3d', 'Lathkill.lox', 'titan.3d', "Nettle_Pot_Master.3d", "P8_Master.3d"] );
+//	CV.UI.loadCave( 'Giants_Oxlow_Maskhill_System.3d' );
+
 }
 
 </script>
