initial work for ES6

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,22 +17,20 @@ function onload () {
 	CV.setEnvironment( { terrainDirectory: "/terrain/", surveyDirectory: "/surveys/" } );
 
 	CV.UI.init( "scene" );
-	CV.UI.loadCaveList( [ 'Giants_Oxlow_Maskhill_System.3d', 'Castleton_Master.3d', 'Cheddar.lox', 'Peak_Master.3d', 'Bradwell_Master.3d', 'all.3d', 'Lathkill.lox', 'titan.3d', "Nettle_Pot_Master.3d", "P8_Master.3d"] );
-//	CV.UI.loadCave( 'Giants_Oxlow_Maskhill_System.3d' );
+	CV.UI.loadCaveList( [ "P8_Master.3d", "Giants_Oxlow_Maskhill_System.3d", "Castleton_Master.3d", "Cheddar.lox", "Peak_Master.3d", "all.3d" ] );
 
 }
 
 </script>
 <div id="scene"></div>
 <p>Mouse: left button down - rotate, right button down pan, mouse wheel - zoom</p>
-<p>The Cheddar and Lathkill Area Survey "Therion" 3D file by University of Bristol Spelaeological Society are released under a
+<p>The Cheddar Survey "Therion" 3D file by University of Bristol Spelaeological Society is released under a
 <a rel="license" title="Creative Commons Attribution-Non-Commercial-Share Alike 2.0 UK: England &amp; Wales License" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons</a> license.
 <br>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/"><img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-nc-sa/2.0/uk/88x31.png"></a>
 </p>
 <p>Contains Ordnance Survey data &copy; Crown copyright and database right 2015.</p>
-<p>contains DTM data &copy; Environment Agency copyright and/or database right 2015</p>
-<p>Contains British Geological Survey materials &copy;NERC 2016</p>
+<p>Contains DTM data &copy; Environment Agency copyright and/or database right 2015.</p>
+<p>Contains British Geological Survey materials &copy;NERC 2016.</p>
 </body>
 </html>
-
